# rinhadebackend-cpp-drogon

./: .clang-format  .dockerignore  .env  CMakeLists.txt  Dockerfile  Makefile  conanfile.txt  docker-compose.dev.yml  docker-compose.yml
docker/database/: init.sql  postgresql.conf
src/: main.cc
src/handlers/: get-contagem-pessoas.hpp  get-health-check.hpp  get-pessoas-by-id.hpp  get-pessoas-by-term.hpp  post-pessoas.hpp
src/include/: responses.hpp  utils.hpp
